--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="top_search">
               <form action="https://echo.htmlacademy.ru" method="get">
-                <input type="text" class="top_search_input" name="search" placeholder="Поиск">
+                <input type="text" class="top_search_input" name="search" placeholder="Поиск:">
                 <label class="top_search_label"></label>
               </form>
             </div>
@@ -82,11 +82,11 @@
             <div class="catalog_item materials">
               <div class="flag flag-new">новинка</div>
               <h2>Материалы</h2>
-              <a class="item_btn" href="#">НА ЛЮБОЙ ВКУС</a>
+              <a class="item_btn" href="#">На любой вкус</a>
             </div>
             <div class="catalog_item tools">
               <h2>Инструмент</h2>
-              <a class="item_btn" href="#">НА ВСЕ СЛУЧАИ</a>
+              <a class="item_btn" href="#">На все случаи</a>
             </div>
             <div class="catalog_slider">
               <input type="radio" id="btn_1" name="toggle" checked>
@@ -95,6 +95,8 @@
                 <label for="btn_1"></label>
                 <label for="btn_2"></label>
               </div>
+              <button class="slider_left"><img src="img/slider_left.png" width="22" height="40" alt="" /></button>
+              <button class="slider_right"><img src="img/slider_right.png" width="22" height="40" alt="" /></button>
               <div class="slides">
                 <div class="slide">
                   <div class="slide_text">
@@ -104,7 +106,7 @@
                     <p>
                       Настоящие мужские игрушки
                     </p>
-                    <a class="main_btn" href="#">ОТКРЫТЬ КАТАЛОГ</a>
+                    <a class="main_btn" href="#">Открыть каталог</a>
                   </div>
                 </div>
                 <div class="slide">
@@ -115,82 +117,82 @@
                     <p>
                       Соседям на радость!
                     </p>
-                    <a class="main_btn" href="#">ОТКРЫТЬ КАТАЛОГ</a>
+                    <a class="main_btn" href="#">Открыть каталог</a>
                   </div>
                 </div>
               </div>
-
-<!--
-              <div class="catalog_slider_text">
-                <span>Перфораторы</span>
-                Настоящие мужские игрушки
-              </div>
--->
-
             </div>
           </div>
           <div class="catalog_right">
             <div class="catalog_item tech">
               <h2>Техника</h2>
-              <a class="item_btn" href="#">ДЛЯ СТРОЙКИ</a>
+              <a class="item_btn" href="#">Для стройки</a>
             </div>
             <div class="catalog_item discount">
               <h2>Скидки 50%</h2>
-              <a class="item_btn" href="#">НА 350 ТОВАРОВ</a>
+              <a class="item_btn" href="#">На 350 товаров</a>
             </div>
             <div class="catalog_item delivery">
               <h2>Доставка</h2>
-              <a class="item_btn" href="#">БЕСПЛАТНО</a>
+              <a class="item_btn" href="#">Бесплатно</a>
             </div>
           </div>
         </section>
         <section class="title">
-          <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
-          <a class="main_btn" href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
+          <h2>Популярные товары:</h2>
+          <a class="main_btn" href="#">Все популярные товары</a>
         </section>
         <section class="products">
           <div class="popular">
             <article class="products_item">
-              <a href="#">
                 <div class="flag">новинка</div>
+                <div class="actions">
+                  <a href="#" class="buy_btn">Купить</a>
+                  <a href="#" class="bookmark_btn">В закладки</a>
+                </div>
                 <img src="img/BOSCH-BFG-9000.jpg" width="218" height="160" alt="" />
-                <h1>Перфоратор BOSCH BFG 9000</h1>
+                <span class="products_title">Перфоратор BOSCH BFG 9000</span>
                 <span class="products_old_price">32500 Р</span>
                 <span class="products_price">25500 Р</span>
-              </a>
             </article>
             <article class="products_item">
-              <a href="#">
                 <div class="flag">новинка</div>
+                <div class="actions">
+                  <a href="#" class="buy_btn">Купить</a>
+                  <a href="#" class="bookmark_btn">В закладки</a>
+                </div>
                 <img src="img/BOSCH-BFG-3000.jpg" width="218" height="160" alt="" />
-                <h1>Перфоратор BOSCH BFG 3000</h1>
+                <span class="products_title">Перфоратор BOSCH BFG 3000</span>
                 <span class="products_old_price">22500 Р</span>
                 <span class="products_price">15500 Р</span>
-              </a>
             </article>
             <article class="products_item">
-              <a href="#">
                 <div class="flag">новинка</div>
+                <div class="actions">
+                  <a href="#" class="buy_btn">Купить</a>
+                  <a href="#" class="bookmark_btn">В закладки</a>
+                </div>
                 <img src="img/BOSCH-BFG-6000.jpg" width="218" height="160" alt="" />
-                <h1>Перфоратор BOSCH BFG 6000</h1>
+                <span class="products_title">Перфоратор BOSCH BFG 6000</span>
                 <span class="products_old_price">25500 Р</span>
                 <span class="products_price">30500 Р</span>
-              </a>
             </article>
             <article class="products_item">
-              <a href="#">
                 <div class="flag flag_new">новинка</div>
+                <div class="actions">
+                  <a href="#" class="buy_btn">Купить</a>
+                  <a href="#" class="bookmark_btn">В закладки</a>
+                </div>
                 <img src="img/BOSCH-BFG-2000.jpg" width="218" height="160" alt="" />
-                <h1>Перфоратор BOSCH BFG 2000</h1>
+                <span class="products_title">Перфоратор BOSCH BFG 2000</span>
                 <span class="products_old_price"></span>
                 <span class="products_price">12500 Р</span>
-              </a>
             </article>
           </div>
         </section>
         <section class="title">
-          <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ</h2>
-          <a class="main_btn" href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
+          <h2>Популярные производители</h2>
+          <a class="main_btn" href="#">Все производители</a>
         </section>
         <section class="manufacters">
           <div class="popular">
@@ -224,7 +226,7 @@
       <section class="services">
         <div class="container">
           <div class="main_block">
-            <h2>СЕРВИСЫ</h2>
+            <h2>Сервисы</h2>
             <p>
               Хороший интернет-магазин отличается от плохого не только ценами!
               Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
@@ -237,16 +239,11 @@
                 <label for="serv_btn_1">Доставка</label>
                 <label for="serv_btn_2">Гарантия</label>
                 <label for="serv_btn_3">Кредит</label>
-<!--
-                <i class="active">Доставка</i>
-                <i>Гарантия</i>
-                <i>Кредит</i>
--->
               </div>
               <div class="services_slides">
                 <div class="services_slide">
                   <div class="services_slide_text">
-                    <div class="services_slide_title">ДОСТАВКА</div>
+                    <div class="services_slide_title">Доставка</div>
                     <p>
                       Мы с удовольствием доставим ваш товар прямо<br>
                       к вашему подъезду совершенно бесплатно!
@@ -258,7 +255,7 @@
                 </div>
                 <div class="services_slide">
                   <div class="services_slide_text">
-                    <div class="services_slide_title">ГАРАНТИЯ</div>
+                    <div class="services_slide_title">Гарантия</div>
                     <p>
                       Если купленный у нас товар поломается или заискрит,
                       а также в случае пожара, спровоцированного его возгаранием,
@@ -270,7 +267,7 @@
                 </div>
                 <div class="services_slide">
                   <div class="services_slide_text">
-                    <div class="services_slide_title">КРЕДИТ</div>
+                    <div class="services_slide_title">Кредит</div>
                     <p>
                       Залезть в долговую яму стало проще!
                       Кредитные консультанты придут вам на помощь.
@@ -278,53 +275,7 @@
                   </div>
                   <img src="img/services_credit.png" alt="deliver" width="465" height="261">
                 </div>
-
               </div>
-
-<!--
-              <ul>
-                <li>
-                  <a class="services_btn" href="#">Доставка</a>
-                </li>
-                <li>
-                  <a class="services_btn" href="#">Гарантия</a>
-                </li>
-                <li>
-                  <a class="services_btn" href="#">Кредит</a>
-                </li>
-              </ul>
-              <div class="services_slider_content">
-                <span class="services_name">ДОСТАВКА</span>
-                <p>
-                  Мы с удовольствием доставим ваш товар прямо
-                  к вашему подъезду совершенно бесплатно!
-                  Ведь мы неплохо заработаем,
-                  поднимая его на ваш этаж!
-                </p>
-                <img src="img/services_deliver.png" width="468" height="261" alt="" />
-              </div>
--->
-<!--
-              <div class="services_slider_content">
-                <span class="services_name">ГАРАНТИЯ</span>
-                <p>
-                  Если купленный у нас товар поломается или заискрит,
-                  а также в случае пожара, спровоцированного его возгаранием,
-                  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
-                  Дом уж восстановите как-нибудь сами.
-                </p>
-                <img src="img/services_guarantee.png" width="389" height="283" alt="" />
-              </div>
-              <div class="services_slider_content">
-                <span class="services_name">КРЕДИТ</span>
-                <p>
-                  Залезть в долговую яму стало проще!
-                  Кредитные консультанты придут вам на помощь.
-                </p>
-                <a class="main_btn" href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
-                <img src="img/services_credit.png" width="465" height="285" alt="" />
-              </div>
--->
             </div>
           </div>
         </div>
@@ -334,7 +285,7 @@
           <div class="main_block_2">
             <div class="company_flex">
               <div class="company_about">
-                <h2>КОМПАНИЯ "ТЕХНОМАРТ"</h2>
+                <h2>Компания «Техномарт»</h2>
                 <p>
                   Настоящий мужской шоппинг начинается здесь!
                   Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
@@ -357,12 +308,12 @@
                 <a class="main_btn" href="#">Подробнее о компании</a>
               </div>
               <div class="company_contacts">
-                <h2>КОНТАКТЫ</h2>
+                <h2>Контакты</h2>
                 <p>
                   Вы можете забрать товар сами,
                   заехав в наш офис:
                 </p>
-                <a href="map.html"><img src="img/map.jpg" alt="Карта" width="300" height="158"></a>
+                <a class="map_open" href="map.html"><img src="img/map.jpg" alt="Карта" width="300" height="158"></a>
                 <a class="main_btn" href="form.html">Заблудились? Напишите нам!</a>
               </div>
             </div>
@@ -432,9 +383,9 @@
               </p>
             </div>
             <div class="footer_social">
-              <a class="social_btn btn_vk" href="#"></a>
-              <a class="social_btn btn_fb" href="#"></a>
-              <a class="social_btn btn_inst" href="#"></a>
+              <a class="social_btn btn_vk" href="#" title="ВКонтакте">ВКонтакте</a>
+              <a class="social_btn btn_fb" href="#" title="Facebook">Facebook</a>
+              <a class="social_btn btn_inst" href="#" title="Instagramm">Instagramm</a>
             </div>
             <div class="footer_contacts">
               <p>
@@ -455,16 +406,19 @@
       <form class="write_us" action="https://echo.htmlacademy.ru" method="post">
         <div class="write_us_text">
           <div class="user_name_block">
-            <label>Ваше имя</label>
-            <input class="user_name" type="text" name="username" placeholder="Представьтесь, пожалуйста">
+            <label>Ваше имя
+              <input class="user_name" type="text" name="username" placeholder="Представьтесь, пожалуйста">
+            </label>
           </div>
           <div class="user_email_block">
-            <label>Ваш e-mail</label>
-            <input class="user_email" type="text" name="email" placeholder="Для отправки ответа">
+            <label>Ваш e-mail
+              <input class="user_email" type="text" name="email" placeholder="Для отправки ответа">
+            </label>
           </div>
           <div class="user_text_block">
-            <label>Текст письма</label>
-            <input class="user_text" type="text" name="text" placeholder="В свободной форме">
+            <label>Текст письма
+              <input class="user_text" type="text" name="text" placeholder="В свободной форме">
+            </label>
           </div>
         </div>
         <div class="modal_btn_block">
@@ -474,7 +428,7 @@
     </div>
     <div class="modal_content_map">
       <button class="modal_content_close" type="button" title="Закрыть">Закрыть</button>
-      <div id="yandex-map"></div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="940" height="446" style="border:0" allowfullscreen></iframe>
     </div>
     <div class="modal_overlay"></div>
     <script src="js/script.min.js"></script>
