--- a/catalog.html
+++ b/catalog.html
@@ -203,7 +203,7 @@
                       <a href="#" class="bookmark_btn">В закладки</a>
                   </div>
 
-                  <img src="img/BOSCH-BFG-3000.jpg" width="218" height="160" alt="" />
+                  <img src="img/bosch_bfg_3000.jpg" width="218" height="160" alt="" />
 
                   <span class="products_title">Перфоратор BOSCH BFG 3000</span>
                   <span class="products_old_price">22500 Р</span>
@@ -216,7 +216,7 @@
                       <a href="#" class="bookmark_btn">В закладки</a>
                   </div>
 
-                  <img src="img/BOSCH-BFG-6000.jpg" width="218" height="160" alt="" />
+                  <img src="img/bosch_bfg_6000.jpg" width="218" height="160" alt="" />
 
                   <span class="products_title">Перфоратор BOSCH BFG 6000</span>
                   <span class="products_old_price">30500 Р</span>
@@ -229,7 +229,7 @@
                       <a href="#" class="bookmark_btn">В закладки</a>
                   </div>
 
-                  <img src="img/BOSCH-BFG-2000.jpg" width="218" height="160" alt="" />
+                  <img src="img/bosch_bfg_2000.jpg" width="218" height="160" alt="" />
 
                   <span class="products_title">Перфоратор BOSCH BFG 2000</span>
                   <span class="products_price">12500 Р</span>
@@ -241,7 +241,7 @@
                       <a href="#" class="bookmark_btn">В закладки</a>
                   </div>
 
-                  <img src="img/BOSCH-BFG-3000.jpg" width="218" height="160" alt="" />
+                  <img src="img/bosch_bfg_3000.jpg" width="218" height="160" alt="" />
 
                   <span class="products_title">Перфоратор BOSCH BFG 3000</span>
                   <span class="products_old_price">22500 Р</span>
@@ -254,7 +254,7 @@
                       <a href="#" class="bookmark_btn">В закладки</a>
                   </div>
 
-                  <img src="img/BOSCH-BFG-6000.jpg" width="218" height="160" alt="" />
+                  <img src="img/bosch_bfg_6000.jpg" width="218" height="160" alt="" />
 
                   <span class="products_title">Перфоратор BOSCH BFG 6000</span>
                   <span class="products_old_price">30500 Р</span>
@@ -267,7 +267,7 @@
                       <a href="#" class="bookmark_btn">В закладки</a>
                   </div>
 
-                  <img src="img/BOSCH-BFG-2000.jpg" width="218" height="160" alt="" />
+                  <img src="img/bosch_bfg_2000.jpg" width="218" height="160" alt="" />
 
                   <span class="products_title">Перфоратор BOSCH BFG 2000</span>
                   <span class="products_price">12500 Р</span>
@@ -279,7 +279,7 @@
                       <a href="#" class="bookmark_btn">В закладки</a>
                   </div>
 
-                  <img src="img/BOSCH-BFG-3000.jpg" width="218" height="160" alt="" />
+                  <img src="img/bosch_bfg_3000.jpg" width="218" height="160" alt="" />
 
                   <span class="products_title">Перфоратор BOSCH BFG 3000</span>
                   <span class="products_old_price">22500 Р</span>
@@ -292,7 +292,7 @@
                       <a href="#" class="bookmark_btn">В закладки</a>
                   </div>
 
-                  <img src="img/BOSCH-BFG-6000.jpg" width="218" height="160" alt="" />
+                  <img src="img/bosch_bfg_6000.jpg" width="218" height="160" alt="" />
 
                   <span class="products_title">Перфоратор BOSCH BFG 6000</span>
                   <span class="products_old_price">30500 Р</span>
@@ -305,7 +305,7 @@
                       <a href="#" class="bookmark_btn">В закладки</a>
                   </div>
 
-                  <img src="img/BOSCH-BFG-2000.jpg" width="218" height="160" alt="" />
+                  <img src="img/bosch_bfg_2000.jpg" width="218" height="160" alt="" />
 
                   <span class="products_title">Перфоратор BOSCH BFG 2000</span>
                   <span class="products_price">12500 Р</span>
@@ -395,9 +395,9 @@
               </p>
             </div>
             <div class="footer_social">
-              <a class="social_btn btn_vk" href="#"></a>
-              <a class="social_btn btn_fb" href="#"></a>
-              <a class="social_btn btn_inst" href="#"></a>
+              <a class="social_btn btn_vk" href="#" title="ВКонтакте">ВКонтакте</a>
+              <a class="social_btn btn_fb" href="#" title="Facebook">Facebook</a>
+              <a class="social_btn btn_inst" href="#" title="Instagramm">Instagramm</a>
             </div>
             <div class="footer_contacts">
               <p>
@@ -423,5 +423,6 @@
         <a class="order_btn" href="#">Продолжить покупки</a>
       </div>
     </div>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
