--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   <a href="#" class="buy_btn">Купить</a>
                   <a href="#" class="bookmark_btn">В закладки</a>
                 </div>
-                <img src="img/BOSCH-BFG-9000.jpg" width="218" height="160" alt="" />
+                <img src="img/bosch_bfg_9000.jpg" width="218" height="160" alt="" />
                 <span class="products_title">Перфоратор BOSCH BFG 9000</span>
                 <span class="products_old_price">32500 Р</span>
                 <span class="products_price">25500 Р</span>
@@ -161,7 +161,7 @@
                   <a href="#" class="buy_btn">Купить</a>
                   <a href="#" class="bookmark_btn">В закладки</a>
                 </div>
-                <img src="img/BOSCH-BFG-3000.jpg" width="218" height="160" alt="" />
+                <img src="img/bosch_bfg_3000.jpg" width="218" height="160" alt="" />
                 <span class="products_title">Перфоратор BOSCH BFG 3000</span>
                 <span class="products_old_price">22500 Р</span>
                 <span class="products_price">15500 Р</span>
@@ -172,7 +172,7 @@
                   <a href="#" class="buy_btn">Купить</a>
                   <a href="#" class="bookmark_btn">В закладки</a>
                 </div>
-                <img src="img/BOSCH-BFG-6000.jpg" width="218" height="160" alt="" />
+                <img src="img/bosch_bfg_6000.jpg" width="218" height="160" alt="" />
                 <span class="products_title">Перфоратор BOSCH BFG 6000</span>
                 <span class="products_old_price">25500 Р</span>
                 <span class="products_price">30500 Р</span>
@@ -183,7 +183,7 @@
                   <a href="#" class="buy_btn">Купить</a>
                   <a href="#" class="bookmark_btn">В закладки</a>
                 </div>
-                <img src="img/BOSCH-BFG-2000.jpg" width="218" height="160" alt="" />
+                <img src="img/bosch_bfg_2000.jpg" width="218" height="160" alt="" />
                 <span class="products_title">Перфоратор BOSCH BFG 2000</span>
                 <span class="products_old_price"></span>
                 <span class="products_price">12500 Р</span>
