--- a/index.html
+++ b/index.html
@@ -431,6 +431,16 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="940" height="446" style="border:0" allowfullscreen></iframe>
     </div>
     <div class="modal_overlay"></div>
+    <div class="modal_content_buy">
+      <button class="modal_content_close" type="button" title="Закрыть">Закрыть</button>
+      <p>
+        Товар добавлен в корзину!
+      </p>
+      <div class="order_btn_block">
+        <a class="main_btn" href="#">Оформить заказ</a>
+        <a class="order_btn" href="#">Продолжить покупки</a>
+      </div>
+    </div>
     <script src="js/script.min.js"></script>
   </body>
 </html>
